[daylight-apa.css] Fixed footnote spacing.

--- a/daylight-apa.css
+++ b/daylight-apa.css
@@ -71,6 +71,9 @@ code
 #footnotes .footnum:after
    {content: ".";}*/
 
+div.footdef
+   {margin-top: 0;}
+
 table, p.moved-figcaption
    {page-break-after: always;
     margin-bottom: 8em;}
